Fixed problem with graph scrollbar color and themes

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -851,7 +851,6 @@ button:not([disabled]),
 .graph-app {
 	--fs-1: 1.1rem;
 	--fs-2: 1.3rem;
-	--scroll-thumb-bg: var(--vscode-scrollbarSlider-background);
 
 	padding: 0;
 
